Fixing er images on mobile for tcingc page

--- a/css/tcingc.css
+++ b/css/tcingc.css
@@ -103,17 +103,9 @@ hr {
 	margin-top: 20px;
 }
 
-.left-images {
-	padding-right: 5px;	
-}
-
 .mid-images {
 	padding-left: 5px;
 	padding-right: 5px;	
-}
-
-.right-images {
-	padding-left: 5px;
 }
 
 .bot-images {
@@ -143,46 +135,27 @@ hr {
     color: #04262F;
 }
 
+/* Mobile portrait */
 @media (min-width:320px) {
     #nav-container #name {font-size: 1.75em;}
 	#proj-name {font-size: 2.0em;}
 	#to-top #right-hr hr {margin-top: 20px;}
 }
 
+/* Mobile landscape */
 @media (min-width:481px) {
     #nav-container #name {font-size: 1.75em;}
     #proj-name {font-size: 2.85em;}
 	#to-top #right-hr hr {margin-top: 20px;}
 }
 
+/* Tablet and desktop */
 @media (min-width:641px) {
     #nav-container #name {font-size: 2em; padding-left: 0;}
     #proj-name {font-size: 2.85em;}
 	#to-top #left-hr {padding-right: 0;}
 	#to-top #right-hr {padding-left: 0;}
 	#to-top #right-hr hr {margin-top: 30px;}
-}
-
-@media (min-width:961px) {
-    #nav-container #name {font-size: 2em; padding-left: 0;}
-    #proj-name {font-size: 2.85em;}
-	#to-top #left-hr {padding-right: 0;}
-    #to-top #right-hr {padding-left: 0;}
-    #to-top #right-hr hr {margin-top: 30px;}
-}
-
-@media (min-width:1025px) {
-    #nav-container #name {font-size: 2em; padding-left: 0;}
-	#proj-name {font-size: 2.85em;}
-	#to-top #left-hr {padding-right: 0;}
-    #to-top #right-hr {padding-left: 0;}
-    #to-top #right-hr hr {margin-top: 30px;}
-}
-
-@media (min-width:1281px) {
-    #nav-container #name {font-size: 2em; padding-left: 0;}
-	#proj-name {font-size: 2.85em;}
-	#to-top #left-hr {padding-right: 0;}
-    #to-top #right-hr {padding-left: 0;}
-    #to-top #right-hr hr {margin-top: 30px;}
+	.left-images {padding-right: 5px;}
+	.right-images {padding-left: 5px;}
 }
